@@ -546,6 +546,7 @@ typedef enum {
     XML_SCHEMAP_NOT_SCHEMA, /* 1771 */
     XML_SCHEMAP_UNKNOWN_MEMBER_TYPE, /* 1772 */
     XML_SCHEMAP_INVALID_ATTR_USE, /* 1723 */
+    XML_SCHEMAP_RECURSIVE, /* 1724 */
     XML_SCHEMAV_NOROOT = 1800,
     XML_SCHEMAV_UNDECLAREDELEM, /* 1801 */
     XML_SCHEMAV_NOTTOPLEVEL, /* 1802 */
