@@ -1,3 +1,11 @@
+Sun Apr 18 21:46:17 CEST 2004 Daniel Veillard <daniel@veillard.com>
+
+	* xpath.c: work around Microsoft compiler NaN bug raise reported
+	  by Mark Vakoc
+	* xmlschemas.c include/libxml/schemasInternals.h 
+	  include/libxml/xmlerror.h: fixed a recusive expection schemas
+	  compilation error raised by taihei goi
+
 Sun Apr 18 16:57:02 CEST 2004 Daniel Veillard <daniel@veillard.com>
 
 	* libxml.spec.in: keep the ChangeLog compressed 
